--- a/hs6502.cabal
+++ b/hs6502.cabal
@@ -25,7 +25,7 @@ executable hs6502
   
   -- Other library packages from which modules are imported.
   build-depends:       base >= 3 && < 5,
-                       vector == 0.9.*,
-                       monadLib == 3.6.*
+                       vector >= 0.9.0,
+                       monadLib >= 3.6.0
   ghc-options: -Wall -O2
   ghc-prof-options: -fprof-auto
